--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,11 +10,12 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:textSize="36sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="1" />
 
     <Button
         android:id="@+id/button"
@@ -26,7 +27,7 @@
         android:shadowDx="1"
         android:shadowDy="4"
         android:shadowRadius="5"
-        android:text="Jogar"
+        android:text="@string/jogar"
         android:textStyle="bold"
         app:backgroundTint="#F539E8E4"
         app:cornerRadius="18dp"
